--- a/HTML/source/demo-html/1-index.html
+++ b/HTML/source/demo-html/1-index.html
@@ -32,12 +32,16 @@
                         <h1 class="logo"><a href="/" title="Kaiz"><img src="../app_themes/img/logo.png" class="img-responsive" alt=""></a></h1>
                         <ul class="site-header__menu">
                             <li><a href="#" title="">Về chúng tôi</a></li>
-                            <li><a href="#" title="">Liên hệ</a></li>
+                            <li><a href="mailto:contact@kaiz.vn" title="">Liên hệ</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="site-header__cover">
                     <div class="col-xs-12">
+                        <div class="cover-text">
+                            <p class="text-uppercase">Cải tiến để phát triển</p>
+                            <p>Ứng dụng <b>công nghệ</b> mang đến những <b>giá trị cốt lõi</b></p>
+                        </div>
                         <img src="../app_themes/img/cover.png" alt="Kaiz" class="img-responsive">
                     </div>
                 </div>
@@ -45,7 +49,7 @@
         </div>
         <!-- diagonal -->
         <div class="diagonal">
-            <a href="#product1" class="btn btn-circle"><span class="ion-ios-arrow-down"></span></a>
+            <button class="btn btn-circle"><span class="ion-ios-arrow-down"></span></button>
         </div>
     </header>
     <!-- site content -->
@@ -223,7 +227,6 @@
                                     <p class="item__desc">Hệ thống camera được lắp tại các trục đường cao tốc. Khi các xe vi phạm giao thông (Lỗi sai làn đường, dừng đỗ xe trái quy định, đi ngước chiều,vượt sai luật…) hệ thống sẽ tự động phát hiện đồng thời nhận dạng biển số xe gửi về trung tâm điều khiển in phiếu phạt đến chủ phương tiện.</p>
                                 </div>
                             </div>
-                            
                         </div>
                     </div>
                 </div>
@@ -232,7 +235,7 @@
         <!-- site footer -->
         <footer id="site-footer" class="site-footer">
             <div class="diagonal">
-                <a href="#product1" class="btn btn-circle"><span class="ion-ios-arrow-up"></span></a>
+                <button class="btn btn-circle"><span class="ion-ios-arrow-up"></span></button>
             </div>
             <div class="container">
                 <h2 class="site-footer__logo"><a href="/" title="Kaiz"><img class="img-responsive" src="../app_themes/img/logo.png" alt="Kaiz"></a></h2>
